@@ -1,3 +1,9 @@
+Tue Jul 31 10:16:31 2001  Steve Huston  <shuston@riverace.com>
+
+        * ace/Dump.h: Clarified the use of ACE_NDEBUG for turning this
+          feature off, not on. Thanks to Don Hinton <dhinton@swan.fr>
+          for noticing this.
+
 Mon Jul 30 13:41:00 2001  Nanbor Wang  <nanbor@cs.wustl.edu>
 
 	* ace/OS.cpp (ACE_Time_Value::FILETIME_to_timval_skew): Updated
